fix a layout issue

--- a/client/controls/style/layout/layout.less
+++ b/client/controls/style/layout/layout.less
@@ -18,6 +18,7 @@
 
   &.flow-start {
     justify-content: start;
+    justify-content: flex-start;
   }
 
   &.flow-center {
@@ -26,6 +27,7 @@
 
   &.flow-end {
     justify-content: end;
+    justify-content: flex-end;
   }
 
   &.flow-between{
